#20 Fixed jumping layout

--- a/front-end/app/styles/_layout.scss
+++ b/front-end/app/styles/_layout.scss
@@ -1,6 +1,8 @@
 .content-container {
     width: 100%;
     margin-top: 64px;
+    margin-left: auto;
+  margin-right: auto;
     transition: 0.2s;
     padding: 0;
     @media (min-width: 1280px) {
